--- a/notebooks/GPX segments for rendering.ipynb
+++ b/notebooks/GPX segments for rendering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d3752de1",
+   "id": "738c6434",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b2d28956",
+   "id": "7730b6fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "63c52b30",
+   "id": "d71b52c1",
    "metadata": {},
    "outputs": [
     {
@@ -127,8 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "f7af8b18",
+   "execution_count": 35,
+   "id": "04a24ddb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,10 +137,11 @@
     "\n",
     "segments, current_segment = [], []\n",
     "distance, distance_counter = 0, 0\n",
+    "sampling_interval_meters = 400.0\n",
     "\n",
     "for i, row in df.iterrows():\n",
     "    current_segment.append((row['latitude'], row['longitude']))\n",
-    "    current_distance_count = row['distance'] // 500.0\n",
+    "    current_distance_count = row['distance'] // sampling_interval_meters\n",
     "    \n",
     "    if current_distance_count > distance_counter:\n",
     "        distance = round(row['distance'] / 1000.0, 2)\n",
@@ -163,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a702de50",
+   "id": "066d53d6",
    "metadata": {},
    "outputs": [],
    "source": []
