Make more frequent screenshots

--- a/notebooks/GPX segments for rendering.ipynb
+++ b/notebooks/GPX segments for rendering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "738c6434",
+   "id": "8b1d2e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7730b6fe",
+   "id": "d86b6ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d71b52c1",
+   "id": "044f4f30",
    "metadata": {},
    "outputs": [
     {
@@ -127,13 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "04a24ddb",
+   "execution_count": 36,
+   "id": "2ec3ae07",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_segment_point(segment):\n",
-    "    return segment[0][0], segment[0][1]\n",
+    "    mid = len(segment) // 2\n",
+    "    return segment[mid][0], segment[mid][1]\n",
     "\n",
     "segments, current_segment = [], []\n",
     "distance, distance_counter = 0, 0\n",
@@ -164,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "066d53d6",
+   "id": "516978c2",
    "metadata": {},
    "outputs": [],
    "source": []
