--- a/notebooks/GPX segments for rendering.ipynb
+++ b/notebooks/GPX segments for rendering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8b1d2e0f",
+   "id": "d7d9de69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d86b6ddc",
+   "id": "33c31571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "044f4f30",
+   "id": "34340659",
    "metadata": {},
    "outputs": [
     {
@@ -127,14 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "2ec3ae07",
+   "execution_count": 48,
+   "id": "71ca4d57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_segment_point(segment):\n",
+    "def get_segment_points(segment):\n",
     "    mid = len(segment) // 2\n",
-    "    return segment[mid][0], segment[mid][1]\n",
+    "    return [\n",
+    "        (segment[0][0], segment[0][1]), \n",
+    "        (segment[mid][0], segment[mid][1]),\n",
+    "    ]\n",
     "\n",
     "segments, current_segment = [], []\n",
     "distance, distance_counter = 0, 0\n",
@@ -154,9 +157,12 @@
     "if current_segment:\n",
     "    segments.append((current_segment, distance))\n",
     "\n",
-    "points = [(get_segment_point(segment[0]), segment[1]) for segment in segments]\n",
+    "points = [(get_segment_points(segment[0]), segment[1]) for segment in segments]\n",
     "\n",
-    "data = [{\"name\": f\"{distance}km\", \"lat\": point[0], \"lon\": point[1]} for (point, distance) in points]    \n",
+    "data = []\n",
+    "for (segment_points, distance) in points:\n",
+    "    for idx, (lat, lon) in enumerate(segment_points, start=1):\n",
+    "        data.append({\"name\": f\"{distance}km_p{idx}\", \"lat\": lat, \"lon\": lon})  \n",
     "    \n",
     "with open('../tests/data.json', 'w') as f:\n",
     "    json.dump(data, f, indent=4)"
@@ -165,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "516978c2",
+   "id": "2bdf66cb",
    "metadata": {},
    "outputs": [],
    "source": []
