Add rotation but not perfect yet

--- a/notebooks/GPX segments for rendering.ipynb
+++ b/notebooks/GPX segments for rendering.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "33c31571",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyproj'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgpxpy\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyproj\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Geod\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgeopy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdistance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m geodesic\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyproj'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gpxpy\n",
     "import json\n",
@@ -30,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "bbec0ac7-c9b5-4cde-ba7e-ada393f16f8d",
    "metadata": {},
    "outputs": [],
@@ -69,21 +57,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "34340659",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mget_gpx_df\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../public/track.gpx\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m df\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m3\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[12], line 14\u001b[0m, in \u001b[0;36mget_gpx_df\u001b[0;34m(gpx_file)\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m segment\u001b[38;5;241m.\u001b[39mpoints:\n\u001b[1;32m      9\u001b[0m             data\u001b[38;5;241m.\u001b[39mappend({\n\u001b[1;32m     10\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatitude\u001b[39m\u001b[38;5;124m'\u001b[39m: point\u001b[38;5;241m.\u001b[39mlatitude,\n\u001b[1;32m     11\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlongitude\u001b[39m\u001b[38;5;124m'\u001b[39m: point\u001b[38;5;241m.\u001b[39mlongitude,\n\u001b[1;32m     12\u001b[0m             })\n\u001b[0;32m---> 14\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame(data)\n\u001b[1;32m     16\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprev_latitude\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatitude\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mshift(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     17\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprev_longitude\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlongitude\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mshift(\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.34228</td>\n",
+       "      <td>103.83519</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.34265</td>\n",
+       "      <td>103.83574</td>\n",
+       "      <td>73.616069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.34276</td>\n",
+       "      <td>103.83592</td>\n",
+       "      <td>97.054093</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   latitude  longitude   distance\n",
+       "0   1.34228  103.83519   0.000000\n",
+       "1   1.34265  103.83574  73.616069\n",
+       "2   1.34276  103.83592  97.054093"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -93,34 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "71ca4d57",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m distance, distance_counter \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     15\u001b[0m sampling_interval_meters \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000.0\u001b[39m\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, row \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[1;32m     18\u001b[0m     current_segment\u001b[38;5;241m.\u001b[39mappend((row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatitude\u001b[39m\u001b[38;5;124m'\u001b[39m], row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlongitude\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n\u001b[1;32m     19\u001b[0m     current_distance_count \u001b[38;5;241m=\u001b[39m row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdistance\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m sampling_interval_meters\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def get_segment_points(segment):\n",
+    "def get_segment_info(segment):\n",
     "    mid = len(segment) // 2\n",
-    "\n",
-    "    geod = Geod(ellps='WGS84')\n",
-    "    fwd_azimuth, back_azimuth, distance = geod.inv(segment[0][1], segment[0][0], segment[mid][1], segment[mid][0])\n",
     "    \n",
-    "    return [\n",
-    "        (segment[0][0], segment[0][1]), \n",
-    "        (segment[mid][0], segment[mid][1]),\n",
-    "        fwd_azimuth,\n",
-    "    ]\n",
+    "    geod = Geod(ellps='WGS84')\n",
+    "    fwd_azimuth, _, _ = geod.inv(\n",
+    "        segment[0][1], \n",
+    "        segment[0][0], \n",
+    "        segment[mid][1], \n",
+    "        segment[mid][0]\n",
+    "    )\n",
+    "\n",
+    "    return segment[mid][0], segment[mid][1], fwd_azimuth\n",
     "\n",
     "segments, current_segment = [], []\n",
     "distance, distance_counter = 0, 0\n",
@@ -140,12 +165,11 @@
     "if current_segment:\n",
     "    segments.append((current_segment, distance))\n",
     "\n",
-    "points = [(get_segment_points(segment[0]), segment[1]) for segment in segments]\n",
+    "points = [(get_segment_info(segment[0]), segment[1]) for segment in segments]\n",
     "\n",
     "data = []\n",
-    "for (segment_points, distance, fwd_azimuth) in points:\n",
-    "    for idx, (lat, lon) in enumerate(segment_points, start=1):\n",
-    "        data.append({\"name\": f\"{distance}km_{idx}_{fwd_azimuth}\", \"lat\": lat, \"lon\": lon})  \n",
+    "for ((lat, lon, fwd_azimuth), distance) in points:\n",
+    "    data.append({\"name\": f\"{distance}km\", \"lat\": lat, \"lon\": lon, \"azimuth\": fwd_azimuth})  \n",
     "    \n",
     "with open('../tests/data.json', 'w') as f:\n",
     "    json.dump(data, f, indent=4)"
@@ -176,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
