Zoom out on the maps

--- a/notebooks/GPX segments for rendering.ipynb
+++ b/notebooks/GPX segments for rendering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "33c31571",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "bbec0ac7-c9b5-4cde-ba7e-ada393f16f8d",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "34340659",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "2   1.34276  103.83592  97.054093"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "71ca4d57",
    "metadata": {},
    "outputs": [],
@@ -145,11 +145,11 @@
     "        segment[mid][0]\n",
     "    )\n",
     "\n",
-    "    return segment[mid][0], segment[mid][1], fwd_azimuth\n",
+    "    return segment[0][0], segment[0][1], fwd_azimuth\n",
     "\n",
     "segments, current_segment = [], []\n",
     "distance, distance_counter = 0, 0\n",
-    "sampling_interval_meters = 1000.0\n",
+    "sampling_interval_meters = 500.0\n",
     "\n",
     "for i, row in df.iterrows():\n",
     "    current_segment.append((row['latitude'], row['longitude']))\n",
