--- a/notebooks/GPX segments for rendering.ipynb
+++ b/notebooks/GPX segments for rendering.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "71ca4d57",
    "metadata": {},
    "outputs": [],
@@ -168,8 +168,14 @@
     "points = [(get_segment_info(segment[0]), segment[1]) for segment in segments]\n",
     "\n",
     "data = []\n",
-    "for ((lat, lon, fwd_azimuth), distance) in points:\n",
-    "    data.append({\"name\": f\"{distance}km\", \"lat\": lat, \"lon\": lon, \"azimuth\": fwd_azimuth})  \n",
+    "for idx, ((lat, lon, fwd_azimuth), distance) in enumerate(points, start=1):\n",
+    "    data.append({\n",
+    "        \"name\": f\"img{idx:04}\", \n",
+    "        \"lat\": lat, \n",
+    "        \"lon\": lon, \n",
+    "        \"azimuth\": fwd_azimuth, \n",
+    "        \"distance\": distance\n",
+    "    })  \n",
     "    \n",
     "with open('../tests/data.json', 'w') as f:\n",
     "    json.dump(data, f, indent=4)"
