--- a/notebooks/GPX Segments.ipynb
+++ b/notebooks/GPX Segments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "33c31571",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
+   "id": "a2812e4f-6558-47d2-a382-440bcdd8d9ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import sys\n",
+    "# !{sys.executable} -m pip install --break-system-packages --user  pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "bbec0ac7-c9b5-4cde-ba7e-ada393f16f8d",
    "metadata": {},
    "outputs": [],
@@ -57,71 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "34340659",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>distance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.34228</td>\n",
-       "      <td>103.83519</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.34265</td>\n",
-       "      <td>103.83574</td>\n",
-       "      <td>73.616069</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.34276</td>\n",
-       "      <td>103.83592</td>\n",
-       "      <td>97.054093</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   latitude  longitude   distance\n",
-       "0   1.34228  103.83519   0.000000\n",
-       "1   1.34265  103.83574  73.616069\n",
-       "2   1.34276  103.83592  97.054093"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = get_gpx_df('../public/track.gpx')\n",
     "df.head(3)"
@@ -129,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "71ca4d57",
    "metadata": {},
    "outputs": [],
@@ -192,9 +142,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "gpx-map",
    "language": "python",
-   "name": "python3"
+   "name": "gpx-map"
   },
   "language_info": {
    "codemirror_mode": {
@@ -206,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
