--- a/notebooks/Video Timestamps.ipynb
+++ b/notebooks/Video Timestamps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "3731e66b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "62fff67e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "48044c70",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3ee03e77",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "5807fbf4",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "81d9cf2c",
    "metadata": {},
    "outputs": [
@@ -68,70 +68,26 @@
      "output_type": "stream",
      "text": [
       "00:00:00 - 0km\n",
-      "00:00:30 - 5.53km\n",
-      "00:01:00 - 10.51km\n",
-      "00:01:30 - 15.62km\n",
-      "00:02:00 - 21.05km\n",
-      "00:02:30 - 26.2km\n",
-      "00:03:00 - 31.05km\n",
-      "00:03:30 - 36.08km\n",
-      "00:04:00 - 41.02km\n",
-      "00:04:30 - 46.04km\n",
-      "00:05:00 - 51.16km\n",
-      "00:05:30 - 56.06km\n",
-      "00:06:00 - 61.0km\n",
-      "00:06:30 - 66.03km\n",
-      "00:07:00 - 71.04km\n",
-      "00:07:30 - 76.02km\n",
-      "00:08:00 - 81.1km\n",
-      "00:08:30 - 86.0km\n",
-      "00:09:00 - 91.0km\n",
-      "00:09:30 - 96.24km\n",
-      "00:10:00 - 101.04km\n",
-      "00:10:30 - 106.01km\n",
-      "00:11:00 - 111.0km\n",
-      "00:11:30 - 116.01km\n",
-      "00:12:00 - 121.02km\n",
-      "00:12:30 - 126.03km\n",
-      "00:13:00 - 131.02km\n",
-      "00:13:30 - 136.01km\n",
-      "00:14:00 - 141.51km\n",
-      "00:14:30 - 146.51km\n",
-      "00:15:00 - 151.52km\n",
-      "00:15:30 - 156.51km\n",
-      "00:16:00 - 161.53km\n",
-      "00:16:30 - 166.74km\n",
-      "00:17:00 - 171.5km\n",
-      "00:17:30 - 176.55km\n",
-      "00:18:00 - 181.53km\n",
-      "00:18:30 - 186.5km\n",
-      "00:19:00 - 191.52km\n",
-      "00:19:30 - 196.51km\n",
-      "00:20:00 - 201.5km\n",
-      "00:20:30 - 206.51km\n",
-      "00:21:00 - 211.54km\n",
-      "00:21:30 - 216.51km\n",
-      "00:22:00 - 221.56km\n",
-      "00:22:30 - 226.55km\n",
-      "00:23:00 - 231.52km\n",
-      "00:23:30 - 236.5km\n",
-      "00:24:00 - 241.51km\n",
-      "00:24:30 - 246.51km\n",
-      "00:25:00 - 251.5km\n",
-      "00:25:30 - 256.51km\n",
-      "00:26:00 - 261.51km\n",
-      "00:26:30 - 266.61km\n",
-      "00:27:00 - 271.51km\n",
-      "00:27:30 - 276.5km\n",
-      "00:28:00 - 281.58km\n",
-      "00:28:30 - 286.59km\n",
-      "00:29:00 - 291.51km\n",
-      "00:29:30 - 296.51km\n",
-      "00:30:00 - 301.51km\n",
-      "00:30:30 - 306.5km\n",
-      "00:31:00 - 311.57km\n",
-      "00:31:30 - 316.52km\n",
-      "00:32:00 - 321.5km\n"
+      "00:00:30 - 5.5km\n",
+      "00:01:00 - 10.5km\n",
+      "00:01:30 - 15.5km\n",
+      "00:02:00 - 20.5km\n",
+      "00:02:30 - 25.5km\n",
+      "00:03:00 - 30.5km\n",
+      "00:03:30 - 35.5km\n",
+      "00:04:00 - 40.5km\n",
+      "00:04:30 - 45.5km\n",
+      "00:05:00 - 50.5km\n",
+      "00:05:30 - 55.5km\n",
+      "00:06:00 - 60.5km\n",
+      "00:06:30 - 65.5km\n",
+      "00:07:00 - 70.5km\n",
+      "00:07:30 - 75.5km\n",
+      "00:08:00 - 80.5km\n",
+      "00:08:30 - 85.5km\n",
+      "00:09:00 - 90.5km\n",
+      "00:09:30 - 95.5km\n",
+      "00:10:00 - 100.5km\n"
      ]
     }
    ],
@@ -155,7 +111,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (real-time-data)",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
