Fix angle of rotatiom

--- a/notebooks/GPX Segments.ipynb
+++ b/notebooks/GPX Segments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "33c31571",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a2812e4f-6558-47d2-a382-440bcdd8d9ac",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bbec0ac7-c9b5-4cde-ba7e-ada393f16f8d",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
     "        \"name\": f\"img{idx:04}\", \n",
     "        \"lat\": lat, \n",
     "        \"lon\": lon, \n",
-    "        \"azimuth\": fwd_azimuth, \n",
+    "        \"azimuth\": -fwd_azimuth, \n",
     "        \"distance\": distance\n",
     "    })  \n",
     "    \n",
